--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,18 @@
     "laravel",
     "permission",
     "roles",
-    "spatie/laravel-permission"
+    "spatie-laravel-permission"
   ],
   "authors": [
     { "name": "Hasan Hawary", "role": "Developer" }
   ],
   "require": {
-    "php": "^8.0",
-    "illuminate/support": "^8.0 || ^9.0 || ^10.0 || ^11.0 || ^12.0"
+    "php": ">8.0",
+    "illuminate/support": "^8.0 || ^9.0 || ^10.0 || ^11.0 || ^12.0",
+    "spatie/laravel-permission": "^6.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.5 || ^11.0"
   },
   "autoload": {
     "psr-4": {
@@ -23,6 +27,11 @@
     "files": [
       "src/helpers.php"
     ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "HasanHawary\\PermissionManager\\Tests\\": "tests/"
+    }
   },
   "extra": {
     "laravel": {
